# DevAtlas

./: .env.example  .gitignore  docker-compose.yml  init-db.sh
DevAtlas Map/backend/: pyproject.toml  requirements.txt
DevAtlas Map/backend/alembic/versions/: a2b3c4d5e6f7_add_parent_id_to_nodes.py  c1d2e3f4a5b6_graph_structure.py  e7f8a9b0c1d2_nullable_position.py  g1h2i3j4k5l6_add_org_id_to_projects.py
DevAtlas Map/backend/app/: config.py  main.py
DevAtlas Map/backend/app/core/: deps.py
DevAtlas Map/backend/app/models/: changelog.py  node.py  project.py  version.py
DevAtlas Map/backend/app/routers/: documents.py  edges.py  nodes.py  projects.py  search.py
DevAtlas Map/backend/app/schemas/: document.py  edge.py  project.py  version.py
DevAtlas Map/backend/app/services/: document_service.py  edge_service.py  project_service.py
GitTrack/backend/: pyproject.toml  requirements.txt
GitTrack/backend/alembic/: env.py
GitTrack/backend/alembic/versions/: 91b2ea0a96f8_init.py  a2b3c4d5e6f7_add_org_id_to_projects.py  b3c4d5e6f7a8_drop_user_fk_constraints.py
GitTrack/backend/app/: config.py  deps.py  main.py
GitTrack/backend/app/core/: security.py
GitTrack/backend/app/models/: __init__.py  attachment.py  comment.py  github_repository.py  issue.py  issue_status_history.py  project.py  project_group.py  spec.py  template.py  user.py
GitTrack/backend/app/routers/: admin.py  attachments.py  auth.py  comments.py  dashboard.py  github.py  issues.py  profile.py  project_groups.py  projects.py  specs.py  status_history.py  templates.py  ws.py
GitTrack/backend/app/schemas/: attachment.py  auth.py  comment.py  github.py  issue.py  project.py  project_group.py  spec.py  status_history.py  template.py
Portal/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
Portal/backend/alembic/: env.py
Portal/backend/app/: config.py  database.py  deps.py  main.py
Portal/backend/app/core/: security.py
(+315 files in other folders)
