[project]
name = "gittrack-backend"
version = "0.1.0"
description = "GitTrack - GitHub-Native Issue Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.0",
    "cryptography>=43.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.26",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.45.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
