[project]
name = "portal-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "pydantic-settings>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "aiosmtplib>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
